@@ -1,5 +1,11 @@
 2014-05-06  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlutils.c:
+	* src/gstttmlutils.h:
+	Make gcc happy.
+
+2014-05-06  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
 	* src/gstttmlbase.c: (gst_ttmlbase_sax2_element_start_ns),
 	(gst_ttmlbase_sax_characters):
